lager-lang/examples/bad/def_after_call.lg
int main() {
    return f();
}

int f() {
    return 0;
}
